--- a/research.html
+++ b/research.html
@@ -100,13 +100,13 @@ Released   : 20131014
 	<h2><a><font size="5">Working Paper</font></a></h2>
 	<ul>
       	<li style="padding-top:1em">
-		<strong> Zhipeng Hou</strong> and Elizebath Tipton. 
+		Zhipeng Hou and Elizebath Tipton. 
 		Automated Literature Screening Technologies: 
 		A Systematic Review Accelerated by Semisupervised Screening Tools
 		
 		</li>
 		<li style="padding-top:1em">
-		<strong> Zhipeng Hou</strong> and Elizebath Tipton. 
+		Zhipeng Hou and Elizebath Tipton. 
 		Designing Trustworthy Performance Measures for Automated Literature Retrieval in Systematic Review
 		</li>
 	</ul>	
